<resources>
    <string name="app_name">WaveSdk</string>

    <string name="reset_song_library">根据您的运动时长设置曲库大小</string>
    <string name="thirty_minute">30分钟</string>
    <string name="thirty_minute_notification">约10首歌曲，大小40M</string>
    <string name="sixty_minute">60分钟</string>
    <string name="sixty_minute_notification">约20首歌曲，大小80M</string>
    <string name="one_hundred_minute">120分钟</string>
    <string name="one_hundred_minute_notification">约40首歌曲，大小160M</string>
    <string name="two_hundred_minute">240分钟</string>
    <string name="two_hundred_minute_notification">约80首歌曲，大小320M</string>
    <string name="reset_singer_notification">重置私人FM将删除您之前所有的音乐喜好</string>
    <string name="reset_fm">重置私人FM</string>
    <string name="private_person_title">运动电台设置</string>
    <string name="complete_txt">完成</string>
    <string name="change_music_library_size">更改曲库大小</string>
    <string name="change_singer">更改音乐口味</string>

    <string name="choose_singer_title_one">为了确定您的音乐口味</string>
    <string name="choose_singer_title_two">请选择三位你喜欢的艺术家</string>
    <string name="search_singer">搜索歌手</string>
    <string name="open_run_radio">开启运动电台</string>
    <string name="search_singer_name">搜索您喜欢的艺术家</string>
    <string name="choose_singer_title">音乐口味设置</string>
    <string name="cancel">取消</string>

    <string name="server_support_from_phl">- 服 务 由 跑 嗨 乐 提 供 -</string>
</resources>
